--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
     <head>
         <meta charset="UTF-8">
@@ -6,5 +7,5 @@
     </head>
     <body>
         <h1>Hello!!!</h1>
-    </body>>
+    </body>
 </html>
