--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Test Page</title>>
+        <title>Test Page</title>
     </head>
     <body>
         <h1>Hello, Magda!!!</h1>
