--- a/index.html
+++ b/index.html
@@ -9,3 +9,9 @@
         <h1>Hello, Magda!!!</h1>
     </body>
 </html>
+
+<script>
+    window.ready = (e) =>  {
+        console.log(e);
+    }
+</script>
