--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </html>
 
 <script>
-    window.ready = (e) =>  {
+    window.onload = (e) =>  {
         console.log(e);
+
+        console.log("hayoooo");
     }
 </script>
